Rename src -> ChatApp to prepare for multiple samples

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   ],
   "gradle.javaDebug.cleanOutput": true,
   "java.project.sourcePaths": [
-    "src"
+    "ChatApp"
   ],
   "java.project.outputPath": "bin"
 }
