Add a sample of how to test wumpus code This sample includes a mock Wumpus game UI, a mock Cave object, and a sample CaveTest UI to test the mock Cave object. The mock Wumpus game UI also shows how to load an image on a button, and how to play a sound.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
   ],
   "gradle.javaDebug.cleanOutput": true,
   "java.project.sourcePaths": [
-    "ChatApp"
+    "ChatApp",
+    "SampleTestApp"
   ],
   "java.project.outputPath": "bin"
 }
